# pocket-racing-server

./: .clang-format  .clangd  .gitignore  README.md  meson.build
.github/workflows/: build_test.yml
bins/: server.cpp
include/: racing.h
include/pocketracing/: config.hpp  pocketracing.hpp
src/: pocketracing.cpp  racing.c  server.c
tests/: all.cpp  meson.build  test_racing.c
